; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_dlist.c_gl_save_CopyTexImage1D.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_dlist.c_gl_save_CopyTexImage1D.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_8__, i64 }
%struct.TYPE_8__ = type { i32 (%struct.TYPE_10__*, i8*, i8*, i8*, i8*, i8*, i8*, i8*)* }
%struct.TYPE_9__ = type { i8*, i8* }

@OPCODE_COPY_TEX_IMAGE1D = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_save_CopyTexImage1D(%struct.TYPE_10__* %0, i8* %1, i8* %2, i8* %3, i8* %4, i8* %5, i8* %6, i8* %7) #0 {
  %9 = alloca %struct.TYPE_10__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i8* %4, i8** %13, align 8
  store i8* %5, i8** %14, align 8
  store i8* %6, i8** %15, align 8
  store i8* %7, i8** %16, align 8
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %19 = load i32, i32* @OPCODE_COPY_TEX_IMAGE1D, align 4
  %20 = call %struct.TYPE_9__* @alloc_instruction(%struct.TYPE_10__* %18, i32 %19, i32 7)
  store %struct.TYPE_9__* %20, %struct.TYPE_9__** %17, align 8
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %22 = icmp ne %struct.TYPE_9__* %21, null
  br i1 %22, label %23, label %52

23:                                               ; preds = %8
  %24 = load i8*, i8** %10, align 8
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i64 1
  %27 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %26, i32 0, i32 1
  store i8* %24, i8** %27, align 8
  %28 = load i8*, i8** %11, align 8
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i64 2
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 0
  store i8* %28, i8** %31, align 8
  %32 = load i8*, i8** %12, align 8
  %33 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %34 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %33, i64 3
  %35 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %34, i32 0, i32 1
  store i8* %32, i8** %35, align 8
  %36 = load i8*, i8** %13, align 8
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i64 4
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i32 0, i32 0
  store i8* %36, i8** %39, align 8
  %40 = load i8*, i8** %14, align 8
  %41 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %42 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %41, i64 5
  %43 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %42, i32 0, i32 0
  store i8* %40, i8** %43, align 8
  %44 = load i8*, i8** %15, align 8
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %46 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %45, i64 6
  %47 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %46, i32 0, i32 0
  store i8* %44, i8** %47, align 8
  %48 = load i8*, i8** %16, align 8
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %50 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %49, i64 7
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %50, i32 0, i32 0
  store i8* %48, i8** %51, align 8
  br label %52

52:                                               ; preds = %23, %8
  %53 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %54 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %53, i32 0, i32 1
  %55 = load i64, i64* %54, align 8
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %71

57:                                               ; preds = %52
  %58 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %59 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %58, i32 0, i32 0
  %60 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %59, i32 0, i32 0
  %61 = load i32 (%struct.TYPE_10__*, i8*, i8*, i8*, i8*, i8*, i8*, i8*)*, i32 (%struct.TYPE_10__*, i8*, i8*, i8*, i8*, i8*, i8*, i8*)** %60, align 8
  %62 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %63 = load i8*, i8** %10, align 8
  %64 = load i8*, i8** %11, align 8
  %65 = load i8*, i8** %12, align 8
  %66 = load i8*, i8** %13, align 8
  %67 = load i8*, i8** %14, align 8
  %68 = load i8*, i8** %15, align 8
  %69 = load i8*, i8** %16, align 8
  %70 = call i32 %61(%struct.TYPE_10__* %62, i8* %63, i8* %64, i8* %65, i8* %66, i8* %67, i8* %68, i8* %69)
  br label %71

71:                                               ; preds = %57, %52
  ret void
}

declare dso_local %struct.TYPE_9__* @alloc_instruction(%struct.TYPE_10__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
